Added dataverse files. More small tweaks

--- a/renshon_replication.Rmd
+++ b/renshon_replication.Rmd
@@ -359,7 +359,11 @@ lm3 <- lm(Immigration_DV ~ Conductivity_Mean,
 stargazer(lm1,lm2, lm3, lm4, lm5,
           type="html",
           notes = "Model (1) shows the effect of the treatment (anxiety) on physiological reactivity while Model (2) shows the effects of physiological reactivity on immigration preferences, controlling for the story condition. Both models includes only Neutral and Anxiety conditions (Relax condition is excluded). Standard errors in brackets.",
-
+          covariate.labels = c("Treatment",
+                               "Skin Conductivity",
+                               "Conservative",
+                               "Income",
+                               "Race"),
           notes.align = "l",
           title="Table 1. Basic Linear Models",
           keep.stat=c("n", "rsq")
